--- a/deployment/web/Dockerfile_circleci
+++ b/deployment/web/Dockerfile_circleci
@@ -19,6 +19,7 @@ RUN apt-get update && apt-get install -y \
     ruby-dev \
     rubygems \
     wget \
+    curl \
     poppler-utils && \
     gem install sass && \
     pip install --upgrade pip && \
