modify nginx for singlecellschemas.org

--- a/deployment/nginx/django_project.conf
+++ b/deployment/nginx/django_project.conf
@@ -10,7 +10,7 @@ server {
     access_log /var/log/nginx/access.log upstream_time;
     listen *:80;
     listen 443 ssl;
-    server_name "";
+    server_name "copo-project.org" "demo.copo-project.org" "copodev.cyverseuk.org";
     charset utf-8;
     ssl_certificate       /run/secrets/copo-project.crt;
     ssl_certificate_key   /run/secrets/copo-project.key;
@@ -120,4 +120,10 @@ server {
         # limit_conn addr 10;
     }
 
+}
+server {
+    access_log /var/log/nginx/access.log upstream_time;
+    listen *:80;
+    server_name "singlecellschemas.org";
+    root /www/singlecellschemas;
 }
