--- a/deployment/nginx/django_project.conf
+++ b/deployment/nginx/django_project.conf
@@ -124,6 +124,6 @@ server {
 server {
     access_log /var/log/nginx/access.log upstream_time;
     listen *:80;
-    server_name "singlecellschemas.org";
+    server_name "*.singlecellschemas.org";
     root /www/singlecellschemas;
 }
