--- a/deployment/local-docker-compose-mac.yaml
+++ b/deployment/local-docker-compose-mac.yaml
@@ -3,7 +3,7 @@
 version: "3.9"
 services:
   copo_web:
-    image: debbyku/copo_new:v2.0.u2204
+    image: debbyku/copo_new:v3.0.u2204
     command: >
       sleep infinity
     ports:
@@ -40,7 +40,7 @@ services:
       - MAIL_SERVER=outlook.office365.com
       - MAIL_USERNAME=eidata@nbi.ac.uk
       - ALLOWED_HOSTS=
-      - PUBLIC_NAME_SERVICE=https://id.tol.sanger.ac.uk/api/v2/
+      - PUBLIC_NAME_SERVICE=https://id.tol.sanger.ac.uk/api/v3/
       - ENA_ENDPOINT_REPORT=https://wwwdev.ebi.ac.uk/ena/submit/report/
       - ASPERA_PATH=/root/.aspera/cli
       - BIOIMAGE_PATH=${vault_copo_bioimage_path}
@@ -100,26 +100,26 @@ services:
       - MONGO_USER=copo_user
       - MONGO_USER_PASSWORD=password
       - MONGO_DB=copo_mongo
-  copo_browser:
-    image: debbyku/browserless.chrome
-    ports: 
-      - "3000:3000"
-    links:
-      - copo_web:copo-new.cyverseuk.org
-    environment:
-      - COPO_WEB_USER=${COPO_WEB_USER}
-      - COPO_WEB_USER_PW=${COPO_WEB_USER_PW}
-      - COPO_WEB_URL=http://copo-new.cyverseuk.org:8000
-      - BROWSERLESS_HTTP_URL=http://copo_browser:3000
-      - BROWSERLESS_WS_URL=ws://copo_browser:3000
-      - CHROME_REFRESH_TIME=1800000
-      - CHROME_REFRESH_TIME_RANDOMNESS=10000
-      - CHROME_ARGS=--no-sandbox,--keepalive=30000,--disable-dev-shm-usage,--disable-gpu,--disable-setuid-sandbox,--disable-software-rasterizer,--disable-dev-shm-usage,--disable-accelerated-2d-canvas,--disable-gpu-sandbox,--disable-infobars,--disable-notifications,--disable-extensions,--disable-web-security,--disable-features=IsolateOrigins,site-per-process,--disable-site-isolat
-      - KEEP_ALIVE=true
-      - PREBOOT_CHROME=true
-      - MAX_CONCURRENT_SESSIONS=5
-      - MAX_QUEUE_LENGTH=10
-      - PREBOOT_QUANTITY=2
+  #copo_browser:
+  #  image: debbyku/browserless.chrome
+  #  ports: 
+  #    - "3000:3000"
+  #  links:
+  #    - copo_web:copo-new.cyverseuk.org
+  #  environment:
+  #    - COPO_WEB_USER=${COPO_WEB_USER}
+  #    - COPO_WEB_USER_PW=${COPO_WEB_USER_PW}
+  #    - COPO_WEB_URL=http://copo-new.cyverseuk.org:8000
+  #    - BROWSERLESS_HTTP_URL=http://copo_browser:3000
+  #    - BROWSERLESS_WS_URL=ws://copo_browser:3000
+  #    - CHROME_REFRESH_TIME=1800000
+  #    - CHROME_REFRESH_TIME_RANDOMNESS=10000
+  #    - CHROME_ARGS=--no-sandbox,--keepalive=30000,--disable-dev-shm-usage,--disable-gpu,--disable-setuid-sandbox,--disable-software-rasterizer,--disable-dev-shm-usage,--disable-accelerated-2d-canvas,--disable-gpu-sandbox,--disable-infobars,--disable-notifications,--disable-extensions,--disable-web-security,--disable-features=IsolateOrigins,site-per-process,--disable-site-isolat
+  #    - KEEP_ALIVE=true
+  #    - PREBOOT_CHROME=true
+  #    - MAX_CONCURRENT_SESSIONS=5
+  #    - MAX_QUEUE_LENGTH=10
+  #    - PREBOOT_QUANTITY=2
   edp:
     image: python:3.10.13-bullseye
     command: sleep infinity
