--- a/deployment/nginx/django_project.conf
+++ b/deployment/nginx/django_project.conf
@@ -4,8 +4,6 @@ log_format upstream_time '$remote_addr - $remote_user [$time_local] '
                          'rt=$request_time uct="$upstream_connect_time" uht="$upstream_header_time" urt="$upstream_response_time"';
 
 access_log /var/log/nginx/access.log upstream_time;
-sendfile on;
-keepalive_timeout 65;
 
 resolver 127.0.0.11 ipv6=off ipv4=on valid=30s;
 
@@ -130,14 +128,14 @@ server {
 }
 
 upstream minio {
-    server copo_minio1:9000;
-    server copo_minio2:9000;
+    server  minio1:9000;
+    server  minio2:9000;
 }
 
 upstream minio_console {
     ip_hash;
-    server copo_minio1:9001;
-    server copo_minio2:9001;
+    server  minio1:9001;
+    server  minio2:9001;
 }
 
 server {
