--- a/deployment/copo.compose.yaml
+++ b/deployment/copo.compose.yaml
@@ -2,11 +2,8 @@ version: "3.9"
 
 # Settings and configurations that are common for all containers
 x-minio-common: &minio-common
-  image: quay.io/minio/minio:RELEASE.2025-02-18T16-25-55Z
-  command: server --console-address ":9001" http://minio{1...2}/data{1...2}
-  expose:
-    - "9000"
-    - "9001"
+  image: quay.io/minio/minio:RELEASE.2025-02-18T16-25-55Z-cpuv1
+  command: server --console-address ":9001" http://copo-minio{1...2}/data{1...2}
   # environment:
     # MINIO_ROOT_USER: minioadmin
     # MINIO_ROOT_PASSWORD: minioadmin
@@ -21,9 +18,6 @@ x-minio-common: &minio-common
   secrets:
     - minio_access_key
     - minio_secret_key
-  networks:
-    copo-frontend-network:
-    copo-backend-network:
   deploy:
     replicas: 1
     endpoint_mode: dnsrr
@@ -44,22 +38,35 @@ services:
     <<: *minio-common
     hostname: minio1
     volumes:
-      - data1-1:/data1
-      - data1-2:/data2
+      - minio-data1-1:/data1
+      - minio-data2-1:/data2
     deploy:
        placement:
         constraints:
           - "node.labels.offline-service==true"
+    networks:
+      default:
+        aliases:
+           - minio1
+      copo-frontend-network:
+      copo-backend-network:
+      
   minio2:
     <<: *minio-common
     hostname: minio2
     volumes:
-      - data2-1:/data1
-      - data2-2:/data2
+      - minio-data1-2:/data1
+      - minio-data2-2:/data2
     deploy:
        placement:
-        constraints:
+         constraints:
           - "node.labels.web-service==true"
+    networks:
+       default:
+         aliases:
+           - minio2
+      copo-frontend-network:
+      copo-backend-network:       
   web:
     image: copo/copo-new-web:v2.0.34.2
     entrypoint:
