--- a/deployment/copo.compose.yaml
+++ b/deployment/copo.compose.yaml
@@ -3,23 +3,22 @@ version: "3.9"
 # Settings and configurations that are common for all containers
 x-minio-common: &minio-common
   image: quay.io/minio/minio:RELEASE.2025-02-18T16-25-55Z-cpuv1
-  command: server --console-address ":9001" http://copo-minio{1...2}/data{1...2}
-  # environment:
-    # MINIO_ROOT_USER: minioadmin
-    # MINIO_ROOT_PASSWORD: minioadmin
-  healthcheck:
-    test: ["CMD", "mc", "ready", "local"]
-    interval: 5s
-    timeout: 5s
-    retries:  5
+  command: server --console-address ":9001" http://minio-{1...2}/data{1...2}
+  #healthcheck:
+    #test: ["CMD", "mc", "ready", "local"]
+    #interval: 5s
+    #timeout: 5s
+    #retries:  5
   environment:
     - MINIO_ROOT_USER_FILE=/run/secrets/minio_access_key
     - MINIO_ROOT_PASSWORD_FILE=/run/secrets/minio_secret_key
   secrets:
     - minio_access_key
     - minio_secret_key
+  networks:
+    - frontend
+    - backend
   deploy:
-    replicas: 1
     endpoint_mode: dnsrr
     restart_policy:
       condition: any
@@ -34,41 +33,21 @@ x-minio-common: &minio-common
       parallelism: 1
       delay: 10s
 services:
-  minio1:
+  minio:
     <<: *minio-common
-    hostname: minio1
+    hostname: minio-{{.Task.Slot}}
     volumes:
-      - minio-data1-1:/data1
-      - minio-data2-1:/data2
+      - minio-data1:/data1
+      - minio-data2:/data2
     deploy:
-       placement:
+      replicas: 2
+      placement:
+        max_replicas_per_node: 1
         constraints:
-          - "node.labels.offline-service==true"
-    networks:
-      default:
-        aliases:
-           - minio1
-      copo-frontend-network:
-      copo-backend-network:
-      
-  minio2:
-    <<: *minio-common
-    hostname: minio2
-    volumes:
-      - minio-data1-2:/data1
-      - minio-data2-2:/data2
-    deploy:
-       placement:
-         constraints:
-          - "node.labels.web-service==true"
-    networks:
-       default:
-         aliases:
-           - minio2
-      copo-frontend-network:
-      copo-backend-network:       
+          - "node.labels.mongo-service==false"
+
   web:
-    image: copo/copo-new-web:v2.0.34.2
+    image: copo/copo-new-web:v2.0.58.1
     entrypoint:
       - bash
       - -c
@@ -132,8 +111,8 @@ services:
       default:
         aliases:
            - copo-new.cyverseuk.org
-      copo-frontend-network:
-      copo-backend-network:
+      frontend:
+      backend:
     deploy:
       replicas: 1
       endpoint_mode: dnsrr
@@ -231,7 +210,7 @@ services:
       - postgres
       - mongo
     networks:
-      - copo-backend-network
+      - backend
     deploy:
       replicas: 1
       endpoint_mode: dnsrr
@@ -266,7 +245,7 @@ services:
   nginx:
     image: copo/copo-nginx:1.25.3.3
     networks:
-      - copo-frontend-network
+      - frontend
     volumes:
       - static-data:/www/static
       - web-data:/www/media
@@ -283,8 +262,6 @@ services:
       - copoweb=copo_web
     depends_on:
       - web
-      - minio1
-      - minio2
     deploy:
       replicas: 1
       restart_policy:
@@ -307,7 +284,7 @@ services:
     command: >
       bash -c "printenv >> /etc/environment && cron && sleep infinity"
     networks:
-      - copo-backend-network
+      - backend
     volumes:
       - mongo-backup:/backup/mongo
       - postgres-backup:/backup/postgres
@@ -346,7 +323,7 @@ services:
   sample_audit:
     image: copo/copo-sample-audit:v0.0.19
     networks:
-      - copo-backend-network
+      - backend
     secrets:
       - copo_mongo_user_password
     environment:
@@ -378,7 +355,7 @@ services:
   redis:
     image: copo/copo-redis:redis-v6.2.6.18
     networks:
-      - copo-backend-network
+      - backend
     deploy:
       replicas: 1
       endpoint_mode: dnsrr
@@ -401,7 +378,7 @@ services:
   postgres:
     image: postgres:15-bullseye
     networks:
-      - copo-backend-network
+      - backend
     volumes:
       - postgres-data:/var/lib/postgresql/data
     secrets:
@@ -441,7 +418,7 @@ services:
           chown 999:999 /data/replica.key
           exec docker-entrypoint.sh $$@
     networks:
-      - copo-backend-network
+      - backend
     hostname: copo-mongo-server
     volumes:
       - mongo-data:/data/db
@@ -511,10 +488,8 @@ services:
 #          cpus: "0.3"
 #          memory: 512mb
 networks:
-  copo-backend-network:
-    external: true
-  copo-frontend-network:
-    external: true
+  backend:
+  frontend:
 secrets:
   copo_web_secret_key:
     external: true
@@ -573,11 +548,7 @@ volumes:
     external: true
   singlecellschemas:
     external: true
-  minio-data1-1:
+  minio-data1:
     external: true
-  minio-data1-2:
-    external: true
-  minio-data2-1:
-    external: true
-  minio-data2-2:
+  minio-data2:
     external: true
