--- a/deployment/nginx/django_project.conf
+++ b/deployment/nginx/django_project.conf
@@ -128,14 +128,12 @@ server {
 }
 
 upstream minio {
-    server  minio1:9000;
-    server  minio2:9000;
+    server  minio:9000;
 }
 
 upstream minio_console {
     ip_hash;
-    server  minio1:9001;
-    server  minio2:9001;
+    server  minio:9001;
 }
 
 server {
