--- a/deployment/nginx/django_project.conf
+++ b/deployment/nginx/django_project.conf
@@ -137,9 +137,14 @@ upstream minio_console {
 }
 
 server {
-    listen       9000;
-    listen  [::]:9000;
-    server_name  localhost;
+    listen       80;
+    listen 443 ssl;
+    server_name  "minio.copo-project.org" "minio.demo.copo-project.org" "minio.copodev.cyverseuk.org";
+    charset utf-8;
+    ssl_certificate       /run/secrets/copo-project.crt;
+    ssl_certificate_key   /run/secrets/copo-project.key;
+    ssl_protocols         TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on; 
 
     # To allow special characters in headers
     ignore_invalid_headers off;
@@ -167,9 +172,14 @@ server {
 }
 
 server {
-    listen       9001;
-    listen  [::]:9001;
-    server_name  localhost;
+    listen   *:80;
+    listen 443 ssl;
+    server_name  "minioconsole.copo-project.org" "minioconsole.demo.copo-project.org" "minioconsole.copodev.cyverseuk.org";
+    charset utf-8;
+    ssl_certificate       /run/secrets/copo-project.crt;
+    ssl_certificate_key   /run/secrets/copo-project.key;
+    ssl_protocols         TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on; 
 
     # To allow special characters in headers
     ignore_invalid_headers off;
