--- a/deployment/copo.compose.yaml
+++ b/deployment/copo.compose.yaml
@@ -204,6 +204,7 @@ services:
       - ECS_SECRET_KEY_FILE=/run/secrets/ecs_secret_key
       - ECS_ACCESS_KEY_ID_FILE=/run/secrets/ecs_access_key
       - ECS_ENDPOINT=http://minio:9000
+      - ECS_ENDPOINT_EXTERNAL=http://minio:9000
       - ENA_V2_SERVICE_SYNC=https://wwwdev.ebi.ac.uk/ena/submit/webin-v2/submit
       - ENA_V2_SERVICE_ASYNC=https://wwwdev.ebi.ac.uk/ena/submit/webin-v2/submit/queue
       - B2DROP_PERMITS=/copo/b2drop/permits
@@ -410,7 +411,7 @@ services:
           memory: 512mb
 
   mongo:
-    image: copo/copo-mongo:v8.0.1
+    image: copo/copo-mongo:v8.0.5
     command: mongod --replSet rs0 --bind_ip_all --keyFile /data/replica.key
     entrypoint:
        - bash
