--- a/deployment/local-docker-compose-mac.yaml
+++ b/deployment/local-docker-compose-mac.yaml
@@ -3,7 +3,7 @@
 version: "3.9"
 services:
   copo_web:
-    image: debbyku/copo_new:v3.0.u2204
+    image: debbyku/copo_new:v24.04.01
     command: >
       sleep infinity
     ports:
@@ -47,7 +47,8 @@ services:
       - BIOIMAGE_SERVER=bsaspera_w@hx-fasp-1.ebi.ac.uk
       - ECS_SECRET_KEY=${vault_ecs_secret_key}
       - ECS_ACCESS_KEY_ID=copo@nbi.ac.uk
-      - ECS_ENDPOINT=https://ei-copo.obj-data.nbi.ac.uk
+      - ECS_ENDPOINT=http://minio:9000
+      - ECS_ENDPOINT_EXTERNAL=http://minio:9000
       - ENA_V2_SERVICE_SYNC=https://wwwdev.ebi.ac.uk/ena/submit/webin-v2/submit
       - ENA_V2_SERVICE_ASYNC=https://wwwdev.ebi.ac.uk/ena/submit/webin-v2/submit/queue
       - ENA_V1_SAMPLE_SERVICE=https://wwwdev.ebi.ac.uk/ena/submit/drop-box/samples
@@ -100,6 +101,19 @@ services:
       - MONGO_USER=copo_user
       - MONGO_USER_PASSWORD=password
       - MONGO_DB=copo_mongo
+
+  copo_minio:
+    image: quay.io/minio/minio 
+    command: server /data --console-address ":9001"
+    hostname: minio
+    environment:
+      MINIO_ROOT_USER: copo@nbi.ac.uk
+      MINIO_ROOT_PASSWORD: ${vault_ecs_secret_key}
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+
+
   #copo_browser:
   #  image: debbyku/browserless.chrome
   #  ports: 
@@ -140,6 +154,7 @@ services:
   #    - MAX_CONCURRENT_SESSIONS=5
   #    - MAX_QUEUE_LENGTH=10
   #    - PREBOOT_QUANTITY=2
+
   edp:
     image: python:3.10.13-bullseye
     command: sleep infinity
