refactor EnfFileTransfer for Zenodo submission

--- a/deployment/copo.compose.yaml
+++ b/deployment/copo.compose.yaml
@@ -103,7 +103,7 @@ services:
       - ENA_V2_SERVICE_ASYNC=https://wwwdev.ebi.ac.uk/ena/submit/webin-v2/submit/queue
       - B2DROP_PERMITS=/copo/b2drop/permits
       - ENA_V1_SAMPLE_SERVICE=https://wwwdev.ebi.ac.uk/ena/submit/drop-box/samples
-      
+      - ZENODOURL=https://zenodo.org/api
     depends_on:
       - redis
       - postgres
