--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -44,6 +44,7 @@ services:
       - ECS_SECRET_KEY=${ECS_SECRET_KEY}
       - ECS_ACCESS_KEY_ID=copo@nbi.ac.uk
       - ECS_ENDPOINT=http://ei-copo.obj-data.nbi.ac.uk
+      - ECS_ENDPOINT_EXTERNAL=http://ei-copo.obj-data.nbi.ac.uk
       - ENA_V2_SERVICE_SYNC=https://wwwdev.ebi.ac.uk/ena/submit/webin-v2/submit
       - ENA_V2_SERVICE_ASYNC=https://wwwdev.ebi.ac.uk/ena/submit/webin-v2/submit/queue
       - B2DROP_PERMITS=/copo/b2drop/permits
