--- a/deployment/copo.compose.production.yaml
+++ b/deployment/copo.compose.production.yaml
@@ -443,6 +443,8 @@ secrets:
     external: true
   ecs_secret_key:
     external: true
+  copo_bioimage_password:
+    external: true
 volumes:
   web-data:
     external: true
