--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ db.sqlite3
 # media folder #
 media/assets/manifests/ERC*
 media/assets/manifests/ERT*
+media/assets/manifests/COPO*
 media/assets/manifests/read*
 media/ena_read_files/
 media/news_images/
