--- a/deployment/nginx/django_project.conf
+++ b/deployment/nginx/django_project.conf
@@ -139,7 +139,7 @@ upstream minio_console {
 server {
     listen       80;
     listen 443 ssl;
-    server_name  "minio.copo-project.org" "minio.demo.copo-project.org" "minio.copodev.cyverseuk.org";
+    server_name  "minio.copo-project.org" "minio-demo.copo-project.org" "minio.copodev.cyverseuk.org";
     charset utf-8;
     ssl_certificate       /run/secrets/copo-project.crt;
     ssl_certificate_key   /run/secrets/copo-project.key;
@@ -174,7 +174,7 @@ server {
 server {
     listen   *:80;
     listen 443 ssl;
-    server_name  "minio-console.copo-project.org" "minio-console.demo.copo-project.org" "minio-console.copodev.cyverseuk.org";
+    server_name  "minio-console.copo-project.org" "minio-console-demo.copo-project.org" "minio-console.copodev.cyverseuk.org";
     charset utf-8;
     ssl_certificate       /run/secrets/copo-project.crt;
     ssl_certificate_key   /run/secrets/copo-project.key;
