--- a/deployment/copo.compose.production.yaml
+++ b/deployment/copo.compose.production.yaml
@@ -1,12 +1,58 @@
-version: "3.8"
+version: "3.9"
+
+# Settings and configurations that are common for all containers
+x-minio-common: &minio-common
+  image: quay.io/minio/minio:RELEASE.2025-02-18T16-25-55Z-cpuv1
+  command: server --console-address ":9001" http://minio-{1...2}/data{1...2}
+  #healthcheck:
+    #test: ["CMD", "mc", "ready", "local"]
+    #interval: 5s
+    #timeout: 5s
+    #retries:  5
+  environment:
+    - MINIO_ROOT_USER_FILE=/run/secrets/minio_access_key
+    - MINIO_ROOT_PASSWORD_FILE=/run/secrets/minio_secret_key
+  secrets:
+    - minio_access_key
+    - minio_secret_key
+  networks:
+    - frontend
+    - backend
+  deploy:
+    endpoint_mode: dnsrr
+    restart_policy:
+      condition: any
+    resources:
+      limits:
+        cpus: '4'
+        memory: 32GB
+      reservations:
+        cpus: '1'
+        memory: 2GB
+    update_config:
+      parallelism: 1
+      delay: 10s
 services:
+  minio:
+    <<: *minio-common
+    hostname: minio-{{.Task.Slot}}
+    volumes:
+      - minio-data1:/data1
+      - minio-data2:/data2
+    deploy:
+      replicas: 2
+      placement:
+        max_replicas_per_node: 1
+        constraints:
+          - "node.labels.minio-service==true"
+
   web:
-    image: copo/copo-new-web:v3.0.0
+    image: copo/copo-new-web:v3.1.0.4
     entrypoint:
       - bash
       - -c
       - |
-        rsync -avhW --no-compress --progress --exclude 'media' --exclude 'logs' /code/ /copo/ && rm -rf /code/ && python manage.py migrate && python manage.py social_accounts && python manage.py setup_groups && python manage.py setup_schemas && python manage.py createcachetable && python manage.py collectstatic --noinput && umask 0000 /copo/media/sample_images && /usr/local/bin/daphne -b 0.0.0.0 -p 8000 src.main_config.asgi:application
+        rsync -avhW --no-compress --progress --exclude 'media' --exclude 'logs' /code/ /copo/ && rm -rf /code/ && python manage.py migrate && python manage.py social_accounts && python manage.py setup_groups && python manage.py setup_schemas && python manage.py createcachetable && python manage.py collectstatic --noinput && /usr/local/bin/daphne -b 0.0.0.0 -p 8000 src.main_config.asgi:application
     volumes:
       - web-data:/copo/media
       - static-data:/copo/static
@@ -51,19 +97,22 @@ services:
       - BIOIMAGE_SERVER=bs-upload@fasp.ebi.ac.uk
       - BIOIMAGE_PASSWORD_FILE=/run/secrets/copo_bioimage_password
       - ECS_SECRET_KEY_FILE=/run/secrets/ecs_secret_key
-      - ECS_ACCESS_KEY_ID=copo@nbi.ac.uk
-      - ECS_ENDPOINT=https://ei-copo.obj-data.nbi.ac.uk
+      - ECS_ACCESS_KEY_ID_FILE=/run/secrets/ecs_access_key
+      - ECS_ENDPOINT=http://minio:9000
+      - ECS_ENDPOINT_EXTERNAL=https://minio.copo-project.org
       - ENA_V2_SERVICE_SYNC=https://www.ebi.ac.uk/ena/submit/webin-v2/submit
       - ENA_V2_SERVICE_ASYNC=https://www.ebi.ac.uk/ena/submit/webin-v2/submit/queue
       - B2DROP_PERMITS=/copo/b2drop/permits
       - ENA_V1_SAMPLE_SERVICE=https://www.ebi.ac.uk/ena/submit/drop-box/samples
+      - ZENODOURL=https://zenodo.org/api
+      - ZENODOTOKEN_FILE=/run/secrets/copo_zenodo_token
     depends_on:
       - redis
       - postgres 
       - mongo
     networks:
-      - copo-frontend-network
-      - copo-backend-network
+      frontend:
+      backend:
     deploy:
       replicas : 1
       endpoint_mode: dnsrr
@@ -96,6 +145,8 @@ services:
       - copo_bioimage_path
       - copo_bioimage_password
       - ecs_secret_key
+      - ecs_access_key
+      - copo_zenodo_token
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000"]
       interval: 2m
@@ -103,7 +154,7 @@ services:
       retries: 3
       start_period: 30s    
   celery_job:
-    image: copo/copo-new-web:v3.0.0
+    image: copo/copo-new-web:v3.1.0.4
     entrypoint:
       - bash
       - -c
@@ -153,17 +204,20 @@ services:
       - BIOIMAGE_SERVER=bs-upload@fasp.ebi.ac.uk
       - BIOIMAGE_PASSWORD_FILE=/run/secrets/copo_bioimage_password
       - ECS_SECRET_KEY_FILE=/run/secrets/ecs_secret_key
-      - ECS_ACCESS_KEY_ID=copo@nbi.ac.uk
-      - ECS_ENDPOINT=https://ei-copo.obj-data.nbi.ac.uk
+      - ECS_ACCESS_KEY_ID_FILE=/run/secrets/ecs_access_key
+      - ECS_ENDPOINT=http://minio:9000
+      - ECS_ENDPOINT_EXTERNAL=http://minio:9000
       - ENA_V2_SERVICE_SYNC=https://www.ebi.ac.uk/ena/submit/webin-v2/submit
       - ENA_V2_SERVICE_ASYNC=https://www.ebi.ac.uk/ena/submit/webin-v2/submit/queue
       - B2DROP_PERMITS=/copo/b2drop/permits
+      - ZENODOURL=https://zenodo.org/api
+      - ZENODOTOKEN_FILE=/run/secrets/copo_zenodo_token
     depends_on:
       - redis
       - postgres 
       - mongo
     networks:
-      - copo-backend-network
+      - backend
     deploy:
       replicas : 1
       endpoint_mode: dnsrr
@@ -195,11 +249,13 @@ services:
       - copo_mail_password
       - copo_bioimage_path
       - copo_bioimage_password
-      - ecs_secret_key        
+      - ecs_secret_key   
+      - ecs_access_key
+      - copo_zenodo_token
   nginx:
-    image: copo/copo-nginx:1.25.3.3
+    image: copo/copo-nginx-minio:v1.25.3.2
     networks:
-      - copo-frontend-network
+      - frontend
     volumes:
       - static-data:/www/static
       - web-data:/www/media
@@ -237,7 +293,7 @@ services:
     command: >
       bash -c "printenv >> /etc/environment && cron && sleep infinity"
     networks:
-      - copo-backend-network
+      - backend
     volumes:
       - mongo-backup:/backup/mongo
       - postgres-backup:/backup/postgres
@@ -276,7 +332,7 @@ services:
   sample_audit:
     image: copo/copo-sample-audit:v0.0.19
     networks:
-      - copo-backend-network
+      - backend
     secrets:
       - copo_mongo_user_password
     environment:
@@ -308,7 +364,7 @@ services:
   redis:
     image: copo/copo-redis:redis-v6.2.6.18
     networks:
-      - copo-backend-network
+      - backend
     deploy:
       replicas: 1
       endpoint_mode: dnsrr
@@ -331,7 +387,7 @@ services:
   postgres:
     image: postgres:15-bullseye
     networks:
-      - copo-backend-network
+      - backend
     volumes:
       - postgres-data:/var/lib/postgresql/data
     secrets:
@@ -360,7 +416,7 @@ services:
           memory: 1GB
 
   mongo:
-    image: copo/copo-mongo:v7.0.1
+    image: copo/copo-mongo:v8.0.5
     command: mongod --replSet rs0 --bind_ip_all --keyFile /data/replica.key
     entrypoint:
        - bash
@@ -371,7 +427,7 @@ services:
           chown 999:999 /data/replica.key
           exec docker-entrypoint.sh $$@
     networks:
-      - copo-backend-network
+      - backend
     hostname: copo-mongo-server
     volumes:
       - mongo-data:/data/db
@@ -404,10 +460,8 @@ services:
           memory: 5GB
 
 networks:
-  copo-backend-network:
-    external: true
-  copo-frontend-network:
-    external: true
+  backend:
+  frontend:
 secrets:
   copo_web_secret_key:
     external: true
@@ -441,6 +495,14 @@ secrets:
     external: true
   copo_bioimage_password:
     external: true
+  ecs_access_key:
+    external: true    
+  minio_access_key:
+    external: true
+  minio_secret_key:
+    external: true  
+  copo_zenodo_token:
+    external: true  
 volumes:
   web-data:
     external: true
@@ -459,4 +521,8 @@ volumes:
   b2drop-permits:
     external: true
   singlecellschemas:
+    external: true
+  minio-data1:
+    external: true
+  minio-data2:
     external: true
