--- a/deployment/nginx/django_project.conf
+++ b/deployment/nginx/django_project.conf
@@ -123,7 +123,7 @@ server {
 }
 server {
     listen *:80;
-    server_name "*.singlecellschemas.org";
+    server_name "singlecellschemas.org";
     root /www/singlecellschemas;
 }
 
